; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/dsa/sja1105/extr_sja1105_spi.c_sja1105_status_unpack.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/dsa/sja1105/extr_sja1105_spi.c_sja1105_status_unpack.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sja1105_status = type { i32, i32, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, %struct.sja1105_status*)* @sja1105_status_unpack to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @sja1105_status_unpack(i8* %0, %struct.sja1105_status* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca %struct.sja1105_status*, align 8
  %5 = alloca i32*, align 8
  store i8* %0, i8** %3, align 8
  store %struct.sja1105_status* %1, %struct.sja1105_status** %4, align 8
  %6 = load i8*, i8** %3, align 8
  %7 = bitcast i8* %6 to i32*
  store i32* %7, i32** %5, align 8
  %8 = load i32*, i32** %5, align 8
  %9 = getelementptr inbounds i32, i32* %8, i32 -1
  store i32* %9, i32** %5, align 8
  %10 = load i32*, i32** %5, align 8
  %11 = getelementptr inbounds i32, i32* %10, i64 1
  %12 = load %struct.sja1105_status*, %struct.sja1105_status** %4, align 8
  %13 = getelementptr inbounds %struct.sja1105_status, %struct.sja1105_status* %12, i32 0, i32 3
  %14 = call i32 @sja1105_unpack(i32* %11, i32* %13, i32 31, i32 31, i32 4)
  %15 = load i32*, i32** %5, align 8
  %16 = getelementptr inbounds i32, i32* %15, i64 1
  %17 = load %struct.sja1105_status*, %struct.sja1105_status** %4, align 8
  %18 = getelementptr inbounds %struct.sja1105_status, %struct.sja1105_status* %17, i32 0, i32 2
  %19 = call i32 @sja1105_unpack(i32* %16, i32* %18, i32 30, i32 30, i32 4)
  %20 = load i32*, i32** %5, align 8
  %21 = getelementptr inbounds i32, i32* %20, i64 1
  %22 = load %struct.sja1105_status*, %struct.sja1105_status** %4, align 8
  %23 = getelementptr inbounds %struct.sja1105_status, %struct.sja1105_status* %22, i32 0, i32 1
  %24 = call i32 @sja1105_unpack(i32* %21, i32* %23, i32 29, i32 29, i32 4)
  %25 = load i32*, i32** %5, align 8
  %26 = getelementptr inbounds i32, i32* %25, i64 1
  %27 = load %struct.sja1105_status*, %struct.sja1105_status** %4, align 8
  %28 = getelementptr inbounds %struct.sja1105_status, %struct.sja1105_status* %27, i32 0, i32 0
  %29 = call i32 @sja1105_unpack(i32* %26, i32* %28, i32 28, i32 28, i32 4)
  ret void
}

declare dso_local i32 @sja1105_unpack(i32*, i32*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
